tests/snapshots/scanner_tests__error_recovery__control_character.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Identifier(
        "foo",
    ),
    Error(
        "Invalid control character: U+0000",
    ),
    Identifier(
        "bar",
    ),
    Eof,
]
