tests/snapshots/scanner_tests__error_recovery__indentation_mismatch_error.snap
---
source: tests/scanner_tests.rs
assertion_line: 215
expression: token_kinds(&tokens)
---
[
    Identifier(
        "a",
    ),
    Colon,
    Newline,
    Indent,
    Identifier(
        "b",
    ),
    Colon,
    Newline,
    Dedent,
    Indent,
    Identifier(
        "c",
    ),
    Colon,
    Dedent,
    Eof,
]
