tests/snapshots/scanner_tests__error_recovery__leading_zeros_become_string.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    String(
        "007",
    ),
    Eof,
]
