tests/snapshots/scanner_tests__error_recovery__multiple_errors.snap
---
source: tests/scanner_tests.rs
assertion_line: 199
expression: token_kinds(&tokens)
---
[
    Error(
        "Unexpected character: @",
    ),
    Eof,
]
