tests/snapshots/scanner_tests__error_recovery__scanner_continues_after_error.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Identifier(
        "@",
    ),
    Identifier(
        "valid",
    ),
    Colon,
    Identifier(
        "value",
    ),
    Eof,
]
