tests/snapshots/scanner_tests__error_recovery__tab_indentation_error.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Identifier(
        "key",
    ),
    Colon,
    Newline,
    Error(
        "Tabs not allowed in indentation",
    ),
    Identifier(
        "value",
    ),
    Eof,
]
