tests/snapshots/scanner_tests__error_recovery__unterminated_string_recovery.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Error(
        "Unterminated string literal",
    ),
    Newline,
    Identifier(
        "valid",
    ),
    Colon,
    Identifier(
        "value",
    ),
    Eof,
]
